added initial css formatting

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,19 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
+  width: 100%;
 }
 
-#map,
-body,
+#map {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
 html {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
