--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,3 +17,12 @@ html {
   padding: 0;
   margin: 0;
 }
+
+
+.legend i {
+  float: left;
+  width: 19px;
+  height: 18px;
+  margin-right: 10px;
+  opacity: 0.8;
+}
